# enchat

./: .env  .envrc  README.md  flake.nix  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
.github/workflows/: frontend.yml  release.yml  rust.yml
src/: App.svelte  Keys.ts  auth.ts  store.ts  supabase.ts  toasts.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  chat.rs  encryption.rs  errors.rs  files.rs  helpers.rs  keybundle.rs  main.rs  message.rs  store.rs  user.rs  user_setup.rs
src-tauri/src/chat/: tests.rs
src-tauri/src/keybundle/: keys.rs  signature.rs
src-tauri/src/message/: tests.rs
src-tauri/src/store/: migrations.rs
src/lib/: AccountSetup.svelte  Avatar.svelte  AvatarUpload.svelte  Dashboard.svelte  KeyManager.svelte  Login.svelte  UserSearch.svelte
src/lib/Chat/: Chat.svelte  ChatInfo.svelte  chat.ts  chatStore.ts
src/lib/Chat/Attachment/: Attachment.svelte  AttachmentList.svelte  AttachmentProgress.svelte  Uploader.svelte  Uploading.svelte  attachements.ts
src/lib/ChatList/: ChatList.svelte
src/lib/Input/: LabeledInput.svelte
src/lib/Login/: Login.svelte  Logout.svelte
src/types/: supabase.ts
