[package]
name = "enchat"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git="https://github.com/tauri-apps/tauri", branch="dev", features = ["http-all", "shell-open"] }
aes-gcm-siv = "0.11.1"
ed25519-dalek = { version = "2.0.0-pre.0", features = [ "rand_core" ] }
rand = "^0.8"
bs58 = "0.4.0"
serde_test = "^1.0"
keyring = "2.0.1"
url = "2.3.1"
dotenv = "^0.15"
pretty_env_logger="0.4.0"
log = "0.4"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
